# landmapyr

./: .gitignore  LICENSE  README.md  _quarto.yml  earthpy.qmd  package.ipynb  plots.md  pyproject.toml  scratch.py  strategy.md  test.md  test.qmd
.github/workflows/: ci.yml
docs/: README.md  _quarto.yml  big-data.html  big-data.qmd  buffalo.html  buffalo.md  buffalo.qmd  climate.html  climate.md  climate.qmd  clustering.html  clustering.md  clustering.qmd  madison.html  madison.qmd  sandhill-crane-migration.html  sandhill_crane.html  sandhill_crane.qmd  siberian-crane-years.html  siberian_crane.html  siberian_crane.qmd
examples/: README.md  big-data.md  big-data.qmd  buffalo.md  buffalo.qmd  climate.md  climate.qmd  clustering.md  clustering.qmd  madison.md  madison.qmd  madison.quarto_ipynb  sandhill_crane.md  sandhill_crane.qmd  sandhill_crane.quarto_ipynb  siberian_crane.md  siberian_crane.qmd
landmapy/: gbif.py  hv_plots.py  legacy.py  naip.py  plot.py  plots.py  polaris.py  process.py  reflect.py  srtm.py  thredds.py  usgs.py
landmapyr/: __init__.py  cached.py  cdcplaces.py  check.py  earthaccess.py  explore.py  gbif.py  gvplot.py  hv_plots.py  initial.py  legacy.py  move_images.py  naip.py  plots.py  polaris.py  process.py  redline.py  reflect.py  srtm.py  thredds.py  usgs.py
notes/: README.md  api.md  dependabot.md  hierarchy.md  notes_class.md  notes_class.qmd  notes_fuzzy.md  notes_fuzzy.qmd  notes_gbif.md  notes_gbif.qmd  notes_project.md  pypl.md  refactor.md  rename.md  render.md  spatial.md  transCritic.md  transR.md
scripts/: usgs_white_river.qmd
tests/: test_lookup.py  test_metadata.py  verify_qmd_logic.py
