[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "landmapy"
version = "0.3"
dependencies = [
    "cartopy", "geopandas", "hvplot", "matplotlib",
    "numpy", "pandas", "regionmask", "rioxarray"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy"
]

[tool.setuptools.packages.find]
include = ["landmapy*"]