[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "landmapyr"
version = "0.4"
dependencies = [
    "cartopy", "geopandas", "hvplot", "matplotlib",
    "numpy", "pandas", "regionmask", "rioxarray"
]
description = "Land Mapping Python Package"
readme = "README.md"
license = {text = "MIT"}
authors = [
    { name = "Brian Yandell", email = "brian.yandell@wisc.edu" }
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy"
]

[tool.setuptools.packages.find]
include = ["landmapyr*"]

[project.urls]
Homepage = "https://github.com/byandell-envsys/landmapyr"
Issues = "https://github.com/byandell-envsys/landmapyr/issues"