[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "landmapyr"
version = "0.4"
dependencies = [
    "cartopy", "geopandas", "hvplot", "matplotlib",
    "numpy", "pandas", "regionmask", "rioxarray",
    "dataretrieval", "earthaccess", "xrspatial", "scikit-learn",
    "scipy", "pystac-client", "tqdm", "xarray", "shapely",
    "contextily", "seaborn", "geoviews", "holoviews", "pygbif"
]
description = "Land Mapping Python Package"
readme = "README.md"
license = {text = "MIT"}
authors = [
    { name = "Brian Yandell", email = "brian.yandell@wisc.edu" }
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy"
]

[tool.setuptools.packages.find]
include = ["landmapyr*"]

[project.urls]
Homepage = "https://github.com/byandell-envsys/landmapyr"
Issues = "https://github.com/byandell-envsys/landmapyr/issues"

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
# You can uncomment the line below if you want Ruff to ignore Jupyter notebooks completely
# extend-exclude = ["*.ipynb"]